# deepset-cloud-sdk

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  data.json  index.html  lol.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  try.py  versions.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  user-story.md
.github/utils/: add-category-id.py  pydoc-markdown.sh
.github/workflows/: api-docs.yaml  compliance.yml  continuous-deployment-dev.yml  continuous-deployment-prod.yml  continuous-integration.yml  deploy-prod.yml  deploy-test.yml  deploy.yml  high-prio-bug.yml  merge-queue.yml  readme-sync.yml  readme_sync.yml  velocity-metrics.yml
0.0.27/: 404.html  index.html  sitemap.xml
0.0.27/search/: search_index.json
0.0.28/: 404.html  index.html  sitemap.xml
0.0.29/: 404.html  index.html  sitemap.xml
0.0.29/search/: search_index.json
0.0.29/upload_files/: index.html
0.0.30/: 404.html  index.html  sitemap.xml
0.0.30/search/: search_index.json
0.0.30/upload_files/: index.html
0.0.31/: 404.html  index.html  sitemap.xml
0.0.31/search/: search_index.json
0.0.31/upload_files/: index.html
0.0.32/: 404.html  index.html  sitemap.xml
0.0.32/search/: search_index.json
0.0.32/upload_files/: index.html
0.0.33/: 404.html  index.html  sitemap.xml
0.0.33/search/: search_index.json
0.0.33/upload_files/: index.html
0.0.34/: 404.html  index.html  sitemap.xml
0.0.34/search/: search_index.json
0.0.34/upload_files/: index.html
0.0.36/: 404.html  index.html  sitemap.xml
0.0.36/upload_files/: index.html
0.0.37/: 404.html  index.html  sitemap.xml
0.0.37/upload_files/: index.html
0.0.38/: 404.html  index.html  sitemap.xml
0.0.38/upload_files/: index.html
0.0.39/: 404.html  index.html  sitemap.xml
0.0.39/_pydoc/: renderers.py
0.0.39/upload_files/: index.html
0.0.40/: 404.html  index.html  sitemap.xml
0.0.40/upload_files/: index.html
0.0.42/: 404.html  index.html  sitemap.xml
0.0.42/search/: search_index.json
0.0.42/upload_files/: index.html
0.041/: 404.html  index.html  sitemap.xml
0.041/search/: search_index.json
0.041/upload_files/: index.html
0.1/: 404.html  index.html  sitemap.xml
0.1/search/: search_index.json
0.2/: 404.html  index.html  sitemap.xml
0.4/: 404.html  index.html  sitemap.xml
0.5/: 404.html  index.html  sitemap.xml
0.6/: 404.html  index.html  sitemap.xml
0.7/: 404.html  index.html  sitemap.xml
0.8/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/upload_files/: index.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/search/: search_index.json
1.0.1/upload_files/: index.html
1.0.2/: 404.html  index.html  sitemap.xml
1.0.2/search/: search_index.json
1.0.2/upload_files/: index.html
1.0.3/: 404.html  index.html  sitemap.xml
1.0.3/upload_files/: index.html
1.0.4/: 404.html  index.html  sitemap.xml
1.0.4/search/: search_index.json
1.0.4/upload_files/: index.html
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/search/: search_index.json
1.1.0/upload_files/: index.html
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/upload_files/: index.html
1.2.1/: 404.html  index.html  sitemap.xml
1.2.1/search/: search_index.json
1.2.1/upload_files/: index.html
1.2.2/: 404.html  index.html  sitemap.xml
1.2.2/upload_files/: index.html
1.2.3/: 404.html  index.html  sitemap.xml
1.2.3/search/: search_index.json
1.2.3/upload_files/: index.html
1.2.4/: 404.html  index.html  sitemap.xml
1.2.4/upload_files/: index.html
1.2.5/: 404.html  index.html  sitemap.xml
1.2.5/upload_files/: index.html
1.3.0/: 404.html  index.html  sitemap.xml
1.3.0/search/: search_index.json
1.3.0/upload_files/: index.html
1.3.1/: 404.html  index.html  sitemap.xml
1.3.1/_stylesheets/: extra.css
1.3.1/search/: search_index.json
1.3.1/upload_files/: index.html
1.4.0/: 404.html  index.html  sitemap.xml
1.4.0/search/: search_index.json
1.4.0/upload_files/: index.html
1.4.1/: 404.html  index.html  sitemap.xml
1.4.1/upload_files/: index.html
1.5.0/: 404.html  index.html  sitemap.xml
1.5.0/search/: search_index.json
1.5.0/upload_files/: index.html
1.5.1/: 404.html  index.html  sitemap.xml
1.5.1/upload_files/: index.html
1.5.2/: 404.html  index.html  sitemap.xml
1.5.2/upload_files/: index.html
1.5.3/: 404.html  index.html  sitemap.xml
1.5.3/upload_files/: index.html
1.5.4/: 404.html  index.html  sitemap.xml
1.5.4/upload_files/: index.html
1.5.5/: 404.html  index.html  sitemap.xml
1.5.5/upload_files/: index.html
1.6.0/: 404.html  index.html  sitemap.xml
1.6.0/_pydoc/: requirements.txt
1.6.0/upload_files/: index.html
1.6.0rc1/: 404.html  index.html  sitemap.xml
1.6.0rc1/search/: search_index.json
1.6.0rc1/upload_files/: index.html
1.7.0/: 404.html  index.html  sitemap.xml
1.7.0/upload_files/: index.html
1.7.1/: 404.html  index.html  sitemap.xml
1.7.2/: 404.html  index.html  sitemap.xml
1.7.3/: 404.html  index.html  sitemap.xml
1.7.4/: 404.html  index.html  sitemap.xml
1.7.5/: 404.html  index.html  sitemap.xml
deepset_cloud_sdk/: README.md  __about__.py  __init__.py  cli.py  models.py
docs/: index.md  upload_files.md
examples/: README.md  upload_datasets.py  upload_file_paths.py
htmlcov/: d_1b8796863b51f940_files_py.html  d_1b8796863b51f940_utils_py.html  d_36943813f546667d_upload_py.html  d_4b00b158b5eb02cd___init___py.html  d_4b00b158b5eb02cd_cli_py.html  d_4b00b158b5eb02cd_models_py.html  d_99c2f34375041283_files_py.html  d_bfa794c1bbed5ccc_config_py.html  d_bfa794c1bbed5ccc_deepset_cloud_api_py.html  d_bfa794c1bbed5ccc_files_py.html  d_bfa794c1bbed5ccc_upload_sessions_py.html  d_d81a78bb885405ac_files_service_py.html  index.html  status.json
latest/: 404.html  index.html  sitemap.xml
search/: search_index.json
site/: 404.html  index.html
src/: __init__.py
test-upload/: example2.txt  example2.txt.meta.json
tests/: conftest.py  manual_e2e_upload_script.py
(+610 files in other folders)
